--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">WhackaMole</string>
+    <string name="str_end_time">You ran out of time!</string>
 </resources>
